Finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            CABECERA
+            HYPERBLOG
+        <span id="tagline">Tu blog de cabecera</span>    
         </div>
         
     
