Modifique la cabecera y el color del texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="cabecera">
             HYPERBLOG
-        <span id="tagline">Tu blog de cabecera</span>    
+        <span id="tagline">Mi blog de confianza</span>    
         </div>
         
     
