--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="cabecera">
             HYPERBLOG
-        <span id="tagline">Tu blog de cabecera</span>    
+        <span id="tagline">Tu blog de Maestro</span>    
         </div>
         
     
@@ -23,7 +23,7 @@
         </p>
         <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.
              Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-<p>Suscribete y dale like</p>
+<p>Suscribete y dale like a este post</p>
     </div>
 </div>
 </div>
