--- a/blogpost.html
+++ b/blogpost.html
@@ -25,6 +25,9 @@
              Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
 <p>Suscribete y dale like a este post</p>
     </div>
+    <div id="footer">
+	    HECHO CON AMOR EN PLATZI
+    </div>    
 </div>
 </div>
 </body>
