arreglando un conflicot en el codigo

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <img id="logo" src="imagenes/dragon.png"</span>
+           <span> <img id="logo" src="imagenes/dragon.png"></span>
             HYPERBLOG
         <span id="tagline">Tu blog de Maestro</span>    
         </div>
