--- a/blogpost.html
+++ b/blogpost.html
@@ -18,13 +18,13 @@
         
     
     <div id="post">
-        <h1>Este es el titulo atractivo e interesante del post</h1>
+        <h1>Este es el titulo atractivo e interesante del post...</h1>
         <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas
             incre&iacute;bles que se pueden hacer con ramas y commits.
         </p>
-        <p>Los blogs son una de las mejores formas de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.
-             Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-<p>Suscribete y dale like a este post</p>
+        <p>Los blogs son una de las mejores formas de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube,
+             excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+<p>Suscribete y dale like a este post...</p>
     </div>
     <div id="footer">
 	    HECHO CON AMOR EN PLATZI
