--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,7 @@
         <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas
             incre&iacute;bles que se pueden hacer con ramas y commits.
         </p>
+        <p><img src="imagenes/equipo.jpg" width="50%"></p>
         <p>Los blogs son una de las mejores formas de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube,
              excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
 <p>Suscribete y dale like a este post...</p>
