--- a/blogpost.html
+++ b/blogpost.html
@@ -4,34 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HYPERBLOG 2.0 es un blog del futuro</title>
+    <title>El titulo del post</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
     <div id="container">
         <div id="cabecera">
-           <span> <img id="logo" src="imagenes/dragon.png"></span>
             HYPERBLOG
-        <span id="tagline">Tu blog de Maestro</span>    
+        <span id="tagline">Mi blog de confianza</span>    
         </div>
         
     
     <div id="post">
-        <h1>Este es el titulo atractivo e interesante del post...</h1>
-        <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas
-            incre&iacute;bles que se pueden hacer con ramas y commits.
+        <h1>Este es el titulo atractivo e interesante del post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas
+            increibles que se pueden hacer con ramas
         </p>
-        <p><img src="imagenes/equipo.jpg" width="50%">
-        <a href="https://imgur.com/t/beer/mdkzBHO"><img src="https://i.imgur.com/t/beer/mdkzBHO.jpg" width="50%" 
-        title="descripcion de la imagen"></a></p>
-        <p>Los blogs son una de las mejores formas de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube,
-             excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-<p>Suscribete y dale like a este post...</p>
+        <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.
+             Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+<p>Suscribete y dale like</p>
     </div>
-    <div id="footer">
-	    HECHO CON AMOR EN PLATZI
-    </div>    
 </div>
 </div>
 </body>
